# alon

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vercel.json
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/components/: command-workbench.tsx  phosphor-icons.tsx  price-chart.tsx
dbt/alon/: dbt_project.yml  profiles.yml
dbt/stocksage/: dbt_project.yml  profiles.yml
docs/: architecture.md  connection-setup.md  data-dictionary.md  database-and-market-data.md  downloads.md  runbook.md  supabase-alon-project.md
docs/ci/: github-actions-ci.example.yml
infra/supabase/migrations/: 0001_initial_schema.sql  0002_alon_portfolio_schema.sql  0003_alon_market_contract_tables.sql  0004_security_performance_tuning.sql
infra/vercel/: project-settings.md
services/airflow/: requirements.txt
services/airflow/dags/: daily_market_pipeline.py  daily_portfolio_refresh.py
services/airflow/tests/: test_dags_import.py
services/api/: pyproject.toml
services/api/src/stocksage_api/: main.py
services/worker/: pyproject.toml
services/worker/src/stocksage_worker/: cli.py  database.py  features.py  indicators.py  settings.py
services/worker/src/stocksage_worker/jobs/: ingest_prices.py  run_predictions.py
services/worker/src/stocksage_worker/providers/: __init__.py  base.py  mock_provider.py  yfinance_provider.py
services/worker/tests/: test_indicators_and_model.py  test_provider_normalization.py
services/worker_lib/: pyproject.toml
services/worker_lib/src/alon_worker_lib/: __init__.py  indicators.py  ml.py  pipeline.py  portfolio.py  validation.py  yfinance_source.py
services/worker_lib/tests/: test_worker_lib.py
(+35 files in other folders)
