[project]
name = "alon-worker-lib"
version = "0.1.0"
description = "Reusable yfinance-only ETL, indicators, portfolio refresh, and ML helpers for Alon."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "psycopg[binary]",
  "pydantic",
  "scikit-learn",
  "sqlalchemy",
  "yfinance"
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
